--- a/index.html
+++ b/index.html
@@ -5,6 +5,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>This is the final project in HTML5 introduction course</title>
+  <style>
+    /* style.css */
+
+body {
+    font-family: Arial, sans-serif; /* Choose your desired font family */
+    font-size: 16px; /* Adjust font size as needed */
+}
+
+header {
+    background-color: lightblue; /* Example color, change as desired */
+}
+
+/* There is no nav tag in your provided HTML, so this rule won't have any effect */
+nav {
+    background-color: lightgreen; 
+}
+
+main {
+    background-color: #f0f0f0; /* Light gray background */
+    font-size: 18px; /* Slightly larger font size for main content */
+}
+
+footer {
+    background-color: #333; /* Dark background for footer */
+    color: white; /* Ensure text is visible on dark background */
+}
+
+li {
+    display: inline-block; /* Arrange list items horizontally */
+    width: 30%; /* Adjust width as needed */
+    margin: 5px; /* Add some spacing between items */
+}
+
+h1 {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Choose a nice font for the heading */
+    color: #333; /* Dark text color */
+}
+
+p {
+    line-height: 1.6; /* Adjust line height for better readability */
+}
+  </style>
 </head>
 
 <body>
