--- a/index.html
+++ b/index.html
@@ -2,88 +2,61 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>This is the final project in HTML5 introduction course</title>
-  <style>
-    /* style.css */
-
-body {
-    font-family: Arial, sans-serif; /* Choose your desired font family */
-    font-size: 16px; /* Adjust font size as needed */
-}
-
-header {
-    background-color: lightblue; /* Example color, change as desired */
-}
-
-/* There is no nav tag in your provided HTML, so this rule won't have any effect */
-nav {
-    background-color: lightgreen; 
-}
-
-main {
-    background-color: #f0f0f0; /* Light gray background */
-    font-size: 18px; /* Slightly larger font size for main content */
-}
-
-footer {
-    background-color: #333; /* Dark background for footer */
-    color: white; /* Ensure text is visible on dark background */
-}
-
-li {
-    display: inline-block; /* Arrange list items horizontally */
-    width: 30%; /* Adjust width as needed */
-    margin: 5px; /* Add some spacing between items */
-}
-
-h1 {
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Choose a nice font for the heading */
-    color: #333; /* Dark text color */
-}
-
-p {
-    line-height: 1.6; /* Adjust line height for better readability */
-}
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>This is the final project in HTML5 introduction course || My home page</title>
+    <link rel="stylesheet" href="css/main-style.css">
 </head>
 
 <body>
 
-  <header>
+<header>
     <h1>Welcome to My final project in HTML5 introduction course</h1>
-  </header>
+    <nav>
+        <a href="index.html" class="active">Home</a>&nbsp;
+        <a href="about-me.html">About me</a>&nbsp;
+        <a href="contact.html">Contact</a>&nbsp;
+        <a href="https://www.coursera.org/" target="_blank">Coursera</a>
+    </nav>
+</header>
 
-  <main>
+<main>
     <section>
-      <h2>About Me</h2>
-      <p>My name is GThanh. I'm a lecture in FPTUCT.</p>
-      <ul>
-        <li>I enjoy learning new technologies.</li>
-        <li>I love coding and fixing bugs :).</li>
-        <li>I would like to make friends.</li>
-      </ul>
+        <h2>Autumn's Embrace</h2>
+        <p>
+            Leaves of gold whisper and fall, <br/>
+            A chilly breeze whispers its call.<br/>
+            Gray clouds paint the sky's vast dome,<br/>
+            A gentle drizzle finds its home.<br/>
+            <br/>
+            Swallows take flight, southward bound,<br/>
+            Seeking warmth on distant ground.<br/>
+            Golden fields of ripened grain,<br/>
+            Farmers rejoice, harvest's gain.<br/>
+            <br/>
+            On a quiet path, serene and lone,<br/>
+            A child's light footsteps are known.<br/>
+            A smile as bright as morning's ray,<br/>
+            Warming hearts along the way.<br/>
+            <br/>
+            Autumn brings a touch of sorrow's trace,<br/>
+            Yet hope's embrace fills every space.<br/>
+            Winter's chill will yield to spring's delight,<br/>
+            Life's vibrant hues will shine bright.<br/>
+            <br/>
+            Source: Internet
+        </p>
     </section>
-
     <section>
-      <h2>My Hobbies is:</h2>
-      <img src="images/cooking.jpg" alt="hobby 1's cooking" style="width: 50%">
-      <img src="images/gaming.jpg" alt="hobby 2's play games" style="width: 50%">
-      <img src="images/trekking.jpg" alt="hobby 3's trekking" style="width: 50%">
+        <h2>Resources</h2>
+        <p>Check out this great <a href="https://www.w3.org/" target="_blank">W3C website</a> for more information.
+        </p>
     </section>
+</main>
 
-    <section>
-      <h2>Resources</h2>
-      <p>Check out this great <a href="https://www.w3.org/" target="_blank">W3C website</a> for more information.
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 ThanhNG4</p>
-  </footer>
+<footer>
+    <p>This website written by &copy; 2024 ThanhNG4 in Coursera</p>
+</footer>
 
 </body>
 
