Push my assignment-1 #3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-    <h1>Welcome to My final project in HTML5 introduction course</h1>
+    <h1>Welcome to My project</h1>
     <nav>
         <a href="index.html" class="active">Home</a>&nbsp;
         <a href="about-me.html">About me</a>&nbsp;
